--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -3,6 +3,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+android:background="@drawable/gradient_background"
 tools:context=".SplashScreenActivity" >
 
     <ImageView
@@ -10,26 +11,6 @@ tools:context=".SplashScreenActivity" >
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
         android:src="@drawable/splash_screen"
-        android:scaleType="fitStart" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:id="@+id/nomApp"
-        android:textSize="50dp"
-        android:fontFamily="sans-serif-condensed"
-        android:layout_above="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tu entrenador personal"
-        android:id="@+id/textView"
-        android:layout_marginBottom="47dp"
-        android:textSize="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:scaleType="fitCenter" />
 
 </RelativeLayout>
