--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:weightSum="1">
+    tools:context="com.dam.proyectodam.ResultActivity">
 
-    <ImageView
-        android:layout_width="287dp"
-        android:layout_height="359dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/main"
-        android:scaleType="centerInside"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:onClick="comenzarEntrenamiento" />
-
-    <TextView
-        android:id="@+id/botonComienzo"
+    <Button android:id="@+id/botonMapa"
         android:layout_width="wrap_content"
         android:gravity="center_vertical|center_horizontal"
         android:layout_height="wrap_content"
-        android:text="@string/text_main"
-        android:layout_gravity="center_vertical|center_horizontal|center" />
+        android:text="@string/button_map"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_vertical|center_horizontal|center"
+        android:onClick="mostrarMapa"/>
+
+    <Button android:id="@+id/botonNuevoEntr"
+        android:layout_width="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_height="wrap_content"
+        android:text="@string/button_main"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_vertical|center_horizontal|center"
+        android:onClick="volverMain"/>
 
 </LinearLayout>
