--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -8,7 +8,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.dam.proyectodam.ResultActivity">
+    tools:context="com.dam.proyectodam.ResultActivity"
+    android:weightSum="1">
+
+    <EditText android:text="@string/dist_rec"
+        android:id="@+id/dist_rec"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"/>
+
+    <EditText android:text="@string/vel_media"
+        android:id="@+id/vel_media"
+        android:layout_width="349dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"/>
 
     <Button android:id="@+id/botonMapa"
         android:layout_width="wrap_content"
@@ -27,5 +40,6 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center_vertical|center_horizontal|center"
         android:onClick="volverMain"/>
+
 
 </LinearLayout>
