--- a/app/src/main/res/layout/activity_calculation.xml
+++ b/app/src/main/res/layout/activity_calculation.xml
@@ -10,13 +10,102 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.dam.proyectodam.CalculationActivity">
 
-    <Button android:id="@+id/botonFin"
-        android:layout_width="wrap_content"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_height="wrap_content"
-        android:text="@string/button_calculation"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:onClick="finalizarEntrenamiento"/>
+    <LinearLayout
+        style="@style/mitadPantalla">
+            <fragment android:id="@+id/mapCalc"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:name="com.google.android.gms.maps.SupportMapFragment"/>
+    </LinearLayout>
 
+    <RelativeLayout
+        style="@style/mitadPantalla">
+        <TextView android:text="@string/titulo_calc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/titulo"
+            android:textSize="15sp"
+            android:layout_marginTop="10dp"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:text="@string/dist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/texto1"
+            android:textSize="15sp"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/titulo" />
+
+        <TextView
+            android:text="@string/vel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/texto2"
+            android:textSize="15sp"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/texto1" />
+
+        <TextView
+            android:text="@string/ac"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/texto3"
+            android:textSize="15sp"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/texto2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textorelleno1"
+            android:layout_alignBottom="@id/texto1"
+            android:layout_toRightOf="@id/texto1"
+            android:layout_toEndOf="@id/texto1"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:text="@string/sin_valor"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textorelleno2"
+            android:layout_alignBottom="@id/texto2"
+            android:layout_alignLeft="@id/textorelleno1"
+            android:layout_alignStart="@id/textorelleno1"
+            android:text="@string/sin_valor"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textorelleno3"
+            android:layout_alignBottom="@id/texto3"
+            android:layout_alignLeft="@id/textorelleno2"
+            android:layout_alignStart="@id/textorelleno2"
+            android:text="@string/sin_valor"
+            android:textSize="12sp" />
+
+        <Button android:id="@+id/botonFin"
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_height="wrap_content"
+            android:text="@string/button_calculation"
+            android:layout_marginTop="20dp"
+            android:layout_centerInParent="true"
+            android:onClick="finalizarEntrenamiento"
+            android:layout_below="@id/texto3"/>
+    </RelativeLayout>
 </LinearLayout>
