--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="fill_parent"
@@ -11,17 +11,61 @@
     tools:context="com.dam.proyectodam.ResultActivity"
     android:weightSum="1">
 
-    <EditText android:text="@string/dist_rec"
-        android:id="@+id/dist_rec"
-        android:layout_width="fill_parent"
+    <TextView android:text="@string/titulo_res"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
+        android:id="@+id/titulo_fin"
+        android:textSize="15sp"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_alignParentTop="true" />
 
-    <EditText android:text="@string/vel_media"
-        android:id="@+id/vel_media"
-        android:layout_width="349dp"
+    <TextView
+        android:text="@string/dist_rec"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
+        android:id="@+id/dist_rec"
+        android:textSize="15sp"
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/titulo_fin" />
+
+    <TextView
+        android:text="@string/vel_media"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/vel_media"
+        android:textSize="15sp"
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/dist_rec" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textorelleno4"
+        android:layout_alignBottom="@id/dist_rec"
+        android:layout_toRightOf="@id/dist_rec"
+        android:layout_toEndOf="@id/texto1"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:text="@string/sin_valor"
+        android:textSize="12sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textorelleno5"
+        android:layout_alignBottom="@id/vel_media"
+        android:layout_alignLeft="@id/textorelleno4"
+        android:layout_alignStart="@id/textorelleno4"
+        android:text="@string/sin_valor"
+        android:textSize="12sp" />
 
     <Button android:id="@+id/botonMapa"
         android:layout_width="wrap_content"
@@ -29,8 +73,9 @@
         android:layout_height="wrap_content"
         android:text="@string/button_map"
         android:layout_marginTop="20dp"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:onClick="mostrarMapa"/>
+        android:layout_centerInParent="true"
+        android:onClick="mostrarMapa"
+        android:layout_below="@id/vel_media" />
 
     <Button android:id="@+id/botonNuevoEntr"
         android:layout_width="wrap_content"
@@ -38,8 +83,9 @@
         android:layout_height="wrap_content"
         android:text="@string/button_main"
         android:layout_marginTop="20dp"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:onClick="volverMain"/>
+        android:layout_centerInParent="true"
+        android:onClick="volverMain"
+        android:layout_below="@id/botonMapa" />
 
 
-</LinearLayout>
+</RelativeLayout>
