--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -46,12 +46,24 @@
         android:layout_below="@id/dist_rec" />
 
     <TextView
+        android:text="@string/duracion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/duracion"
+        android:textSize="15sp"
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/vel_media" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textorelleno4"
         android:layout_alignBottom="@id/dist_rec"
         android:layout_toRightOf="@id/dist_rec"
-        android:layout_toEndOf="@id/texto1"
+        android:layout_toEndOf="@id/titulo_fin"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:text="@string/sin_valor"
@@ -67,6 +79,16 @@
         android:text="@string/sin_valor"
         android:textSize="12sp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textorelleno6"
+        android:layout_alignBottom="@id/duracion"
+        android:layout_alignLeft="@id/textorelleno5"
+        android:layout_alignStart="@id/textorelleno5"
+        android:text="@string/sin_valor"
+        android:textSize="12sp" />
+
     <Button android:id="@+id/botonMapa"
         android:layout_width="wrap_content"
         android:gravity="center_vertical|center_horizontal"
@@ -75,7 +97,7 @@
         android:layout_marginTop="20dp"
         android:layout_centerInParent="true"
         android:onClick="mostrarMapa"
-        android:layout_below="@id/vel_media" />
+        android:layout_below="@id/duracion" />
 
     <Button android:id="@+id/botonNuevoEntr"
         android:layout_width="wrap_content"
