--- a/app/src/main/res/layout-land/activity_calculation.xml
+++ b/app/src/main/res/layout-land/activity_calculation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -27,10 +27,13 @@
             android:id="@+id/titulo"
             android:textSize="15sp"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
             android:layout_centerInParent="true"
             android:textStyle="bold"
             android:textColor="@android:color/black"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:gravity="center" />
 
         <TextView
             android:text="@string/dist"
@@ -40,6 +43,8 @@
             android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@id/titulo" />
@@ -52,6 +57,8 @@
             android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@id/texto1" />
@@ -64,6 +71,8 @@
             android:textSize="15sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@id/texto2" />
