--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,13 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@drawable/gradient_background_2"
     tools:context=".MainActivity"
     android:weightSum="1">
 
     <ImageView
-        android:layout_width="287dp"
+        android:layout_width="200dp"
         android:layout_height="359dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/main"
@@ -24,12 +24,14 @@
 
     <TextView
         android:id="@+id/botonComienzo"
-        android:layout_width="wrap_content"
+        android:layout_width="298dp"
         android:gravity="center_vertical|center_horizontal"
         android:layout_height="wrap_content"
         android:text="@string/text_main"
         android:textColor="@android:color/black"
         android:textStyle="italic"
+        android:layout_marginStart="30sp"
+        android:layout_marginLeft="30sp"
         android:layout_gravity="center_vertical|center_horizontal|center" />
 
 </LinearLayout>
