--- a/app/src/main/res/layout/number_picker.xml
+++ b/app/src/main/res/layout/number_picker.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="wrap_content" >
 
     <NumberPicker
         android:id="@+id/numberPicker1"
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp" />
+        android:layout_marginTop="5dp" />
 
     <Button
         android:id="@+id/button2"
@@ -18,7 +18,8 @@
         android:layout_below="@+id/numberPicker1"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_toEndOf="@+id/numberPicker1"
         android:layout_toRightOf="@+id/numberPicker1"
         android:text="@string/picker_ko" />
@@ -31,7 +32,8 @@
         android:layout_alignBottom="@+id/button2"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_toStartOf="@+id/numberPicker1"
         android:layout_toLeftOf="@+id/numberPicker1"
         android:text="@string/picker_ok" />
