--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,6 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.dam.proyectodam.ResultActivity"
+    android:background="@drawable/gradient_background_2"
     android:weightSum="1">
 
     <TextView android:text="@string/titulo_res"
@@ -18,7 +19,8 @@
         android:textSize="15sp"
         android:layout_marginTop="10dp"
         android:layout_centerInParent="true"
-        android:textColor="@android:color/holo_green_dark"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:layout_alignParentTop="true" />
 
     <TextView
@@ -27,7 +29,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/dist_rec"
         android:textSize="15sp"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/black"
         android:layout_marginTop="20dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -39,7 +41,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/vel_media"
         android:textSize="15sp"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/black"
         android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -51,7 +53,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/duracion"
         android:textSize="15sp"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/black"
         android:layout_marginTop="15dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -67,6 +69,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:text="@string/sin_valor"
+        android:textColor="@android:color/holo_red_light"
         android:textSize="12sp" />
 
     <TextView
@@ -77,6 +80,7 @@
         android:layout_alignLeft="@id/textorelleno4"
         android:layout_alignStart="@id/textorelleno4"
         android:text="@string/sin_valor"
+        android:textColor="@android:color/holo_red_light"
         android:textSize="12sp" />
 
     <TextView
@@ -87,6 +91,7 @@
         android:layout_alignLeft="@id/textorelleno5"
         android:layout_alignStart="@id/textorelleno5"
         android:text="@string/sin_valor"
+        android:textColor="@android:color/holo_red_light"
         android:textSize="12sp" />
 
     <Button android:id="@+id/botonMapa"
@@ -96,6 +101,7 @@
         android:text="@string/button_map"
         android:layout_marginTop="20dp"
         android:layout_centerInParent="true"
+        android:background="@android:color/white"
         android:onClick="mostrarMapa"
         android:layout_below="@id/duracion" />
 
@@ -106,8 +112,8 @@
         android:text="@string/button_main"
         android:layout_marginTop="20dp"
         android:layout_centerInParent="true"
+        android:background="@android:color/white"
         android:onClick="volverMain"
         android:layout_below="@id/botonMapa" />
-
 
 </RelativeLayout>
