--- a/app/src/main/res/layout/activity_calculation.xml
+++ b/app/src/main/res/layout/activity_calculation.xml
@@ -13,7 +13,9 @@
 
     <LinearLayout
         style="@style/mitadPantalla">
-            <fragment android:id="@+id/mapCalc"
+            <fragment
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/mapCalc"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:name="com.google.android.gms.maps.SupportMapFragment"/>
